edited to take images fromm server files